# cirron-sdk

./: .autorc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  setup.py  test_cirra.py  test_cirron.py  test_sdk.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-size.yml  publish-pypi.yml  publish-testpypi.yml  release-next.yml  release-rc.yml  release.yml
cirra/: __init__.py  core.py
cirra/data/: __init__.py  manager.py
cirra/deploy/: __init__.py  manager.py
cirra/model/: __init__.py  manager.py
cirra/utils/: __init__.py
cirron/: __init__.py  core.py
cirron/config/: __init__.py  loader.py
cirron/data/: __init__.py  adapters.py  constructor.py  manager.py  processors.py  sources.py
cirron/data/transforms/: __init__.py  base.py  datetime.py  encoders.py  encoders_enhanced.py  feature_engineering.py  features.py  imputation.py  pipelines.py  registry.py  scalers.py  selector_parser.py  selectors.py  serialization.py  validation.py
cirron/decorators/: __init__.py  core.py  metadata.py  registry.py
cirron/deploy/: __init__.py  manager.py
cirron/model/: __init__.py  manager.py  model.py
cirron/model/generators/: __init__.py  api_generator.py  base.py  factory.py  pytorch_generator.py  sklearn_generator.py  tensorflow_generator.py
cirron/types/: __init__.py  config.py  yaml.py
cirron/utils/: __init__.py  framework_detection.py
docs/: TRANSFORMS_GUIDE.md  refactor-stories.md  spec.md  spool-format.md
examples/: basic_transforms_demo.py  decorators.py  experiments_decorator.py  transforms_demo.py
scripts/: auto_bump.sh  bump_version.py
src/cirron/: __init__.py
src/cirron/cli/: __init__.py
src/cirron/core/: blob_queue.py  config.py  deps.py  env.py  errors.py  flush.py  ingest.py  mark.py  profiler.py  render.py  scope.py  sinks.py  snapshot_buffer.py  trace.py  trace_buffer.py  transport.py  wrappers.py  yaml_types.py
src/cirron/data/: __init__.py  lazy.py  load.py  match.py  returns.py  size.py  sql.py  transform.py
src/cirron/data/sources/: __init__.py  azure.py  databricks.py  gcs.py  local.py  mysql.py  postgres.py  registered.py  s3.py  snowflake.py
src/cirron/hooks/: __init__.py  _registry.py  _tf_impl.py  _torch_impl.py  _transformers_impl.py  sklearn.py  tensorflow.py  torch.py  transformers.py
src/cirron/inference/: decorator.py  llm.py
src/cirron/secrets/: client.py
src/cirron/snapshots/: blob.py  full.py  sampled.py  stats.py  types.py
tests/: test_basic_transforms.py  test_data_constructor.py  test_decorators.py  test_enhanced_transforms.py  test_features.py  test_generator.py  test_loader.py  test_profile.py  test_transforms.py  test_yaml.py
tests/fixtures/: cirron-full.yaml  cirron-minimal.yaml
tests/integration/: test_flush_atexit.py  test_profile_lifecycle.py  test_snapshot_upload.py  test_torch_training_loop.py  test_transport_http.py
tests/overhead/: README.md  baseline.json  conftest.py  test_mark_overhead.py  test_overhead.py  test_scope_overhead.py  test_snapshots_overhead.py  test_wrappers_overhead.py
tests/overhead/results/: local.json
tests/unit/: test_blob_queue.py  test_blob_upload_flow.py  test_cirron_class.py  test_deps.py  test_env.py  test_flush.py  test_hook_registry.py  test_hooks_sklearn.py  test_hooks_tensorflow.py  test_hooks_torch.py  test_hooks_transformers.py  test_inference.py  test_inference_llm.py  test_ingest.py  test_load.py  test_loader.py  test_mark.py  test_match.py  test_output_sinks.py  test_profile.py  test_profiler.py  test_scope.py  test_secrets.py  test_snapshots_sampled.py  test_snapshots_stats.py  test_sql_sources.py  test_trace.py  test_transport.py  test_watch.py  test_wrappers.py  test_yaml.py
