[project]
name = "cirron-sdk"
version = "0.0.1"
description = "Python SDK for the Cirron platform — profiler, data loader, inference instrumentation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Devin Lynch", email = "devin@cirron.com" },
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
arrow = ["pyarrow>=14.0"]
torch = ["torch>=2.0"]
tensorflow = ["tensorflow>=2.14"]
transformers = ["transformers>=4.41", "accelerate>=1.1.0"]
sklearn = ["scikit-learn>=1.3"]
hf = ["datasets>=2.14"]
image = ["pillow>=10.0"]
s3 = ["boto3>=1.28"]
gcs = ["google-cloud-storage>=2.10"]
azure = ["azure-storage-blob>=12.19"]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["PyMySQL>=1.1"]
databricks = ["databricks-sql-connector>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
sql = ["cirron-sdk[postgres,mysql,databricks,snowflake]"]
dotenv = ["python-dotenv>=1.0"]
safetensors = ["safetensors>=0.4"]
all = ["cirron-sdk[pandas,polars,arrow,torch,tensorflow,transformers,sklearn,hf,image,s3,gcs,azure,postgres,mysql,databricks,snowflake,dotenv,safetensors]"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
cirron = "cirron.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cirron"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

# The SDK wraps pandas/polars/torch/tensorflow/transformers, all of which are
# typed as Any under ignore_missing_imports. no-any-return would fire on every
# thin adapter/wrapper call; disable it rather than paper over with casts.
disable_error_code = ["no-any-return"]
