[project]
name = "cirron-sdk"
dynamic = ["version"]
description = "Deep profiling for ML training and inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cirron", email = "dx@cirron.com" },
]
keywords = [
    "ml",
    "profiling",
    "performance",
    "observability",
    "pytorch",
    "tensorflow",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://cirron.com"
Documentation = "https://docs.cirron.com"
Repository = "https://github.com/cirron/cirron-sdk"
Issues = "https://github.com/cirron/cirron-sdk/issues"
Changelog = "https://github.com/cirron/cirron-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
arrow = ["pyarrow>=14.0"]
torch = ["torch>=2.0"]
overhead = ["torchvision>=0.15"]
# ``tensorflow`` pulls in ``keras`` transitively (keras 3 is TF's default
# frontend). ``tf-keras`` is explicitly listed because the TF 2.16+ lazy
# loader defers to it for legacy ``keras.callbacks``/``Model.fit``
# shims, and the SDK's Keras hook attaches via that surface. Both live
# under the ``tensorflow`` extra so users who never touch TF don't pay
# the ~500 MB install cost of ``pip install cirron-sdk``.
tensorflow = ["tensorflow>=2.14", "keras>=3", "tf-keras>=2.21.0"]
transformers = ["transformers>=4.41", "accelerate>=1.1.0"]
sklearn = ["scikit-learn>=1.3"]
hf = ["datasets>=2.14"]
image = ["pillow>=10.0"]
s3 = ["boto3>=1.28"]
gcs = ["google-cloud-storage>=2.10"]
azure = ["azure-storage-blob>=12.19"]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["PyMySQL>=1.1"]
databricks = ["databricks-sql-connector>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
sql = ["cirron-sdk[postgres,mysql,databricks,snowflake]"]
dotenv = ["python-dotenv>=1.0"]
safetensors = ["safetensors>=0.4"]
all = ["cirron-sdk[pandas,polars,arrow,torch,tensorflow,transformers,sklearn,hf,image,s3,gcs,azure,postgres,mysql,databricks,snowflake,dotenv,safetensors]"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the git tag at build time. Tags follow vX.Y.Z
# (stable) or vX.Y.Z-rc.N (prerelease, from the rc branch) and are
# created by `auto`. PEP 440 normalization happens automatically:
# v0.1.0-rc.0 → 0.1.0rc0. Untagged dev installs get a vcs-derived
# pseudo-version like 0.1.0.dev3+g<sha>.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# Write the resolved version to a generated module so `cirron.__version__`
# works in editable installs without needing a wheel rebuild.
version-file = "src/cirron/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cirron"]

[tool.hatch.build.targets.sdist]
# Exclude local-only metadata that has no place in the public sdist.
exclude = [
    ".claude",
    ".cirron",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "/tmp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

# The SDK wraps pandas/polars/torch/tensorflow/transformers, all of which are
# typed as Any under ignore_missing_imports. no-any-return would fire on every
# thin adapter/wrapper call; disable it rather than paper over with casts.
disable_error_code = ["no-any-return"]
